--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	</head>
 	
 <body>
-<h1>Karmaland</h1>
+	<h1>Karmaland</h1>
+	<p style="color:red; font-size:100px">KARMALAND </p>
+	
 </body>
 </html>
 
