--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<h1>Karmaland</h1>
 	<p style="color:red; font-size:100px">KARMALAND </p>
+	<body background="karmaland.jpg">
 	
 </body>
 </html>
